week 4 - authorization and authentication
