# swagger-output.json
@@ -7,7 +7,9 @@
   },
   "host": "budgetwithtiffany.onrender.com",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": [
+    "https"
+  ],
   "paths": {
     "/": {
       "get": {
@@ -21,12 +23,19 @@
     },
     "/transactions/": {
       "get": {
-        "tags": ["Transactions"],
+        "tags": [
+          "Transactions"
+        ],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -37,26 +46,33 @@
         }
       },
       "post": {
-        "tags": ["Transactions"],
-        "description": "\r  {\r  \"accountName\": \"Cash\",\r  \"transactionAmount\": 5,\r  \"transactionDate\": \"2024-10-03T00:00:00.000Z\",\r  \"transactionDescription\": \"Isaac gave me cash\"\r  }\r  ",
+        "tags": [
+          "Transactions"
+        ],
+        "description": "",
         "parameters": [
           {
             "name": "body",
             "in": "body",
+            "description": "Create a new Transaction",
             "schema": {
               "type": "object",
               "properties": {
                 "accountName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Cash"
                 },
                 "transactionAmount": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 5
                 },
                 "transactionDate": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "2024-10-03T00:00:00.000Z"
                 },
                 "transactionDescription": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Isaac gave me cash"
                 }
               }
             }
@@ -65,6 +81,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -77,9 +96,13 @@
     },
     "/transactions/{transactionId}": {
       "get": {
-        "tags": ["Transactions"],
+        "tags": [
+          "Transactions"
+        ],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "transactionId",
@@ -91,6 +114,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -104,8 +130,10 @@
         }
       },
       "put": {
-        "tags": ["Transactions"],
-        "description": "\r  {\r  \"accountName\": \"Cash\",\r  \"transactionAmount\": 5,\r  \"transactionDate\": \"2024-10-03T00:00:00.000Z\",\r  \"transactionDescription\": \"Alex gave me cash\"\r  }\r  ",
+        "tags": [
+          "Transactions"
+        ],
+        "description": "Change Isaac gave me cash to Alex gave me cash",
         "parameters": [
           {
             "name": "transactionId",
@@ -116,20 +144,25 @@
           {
             "name": "body",
             "in": "body",
+            "description": "Create a new Transaction",
             "schema": {
               "type": "object",
               "properties": {
                 "accountName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Cash"
                 },
                 "transactionAmount": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 5
                 },
                 "transactionDate": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "2024-10-03T00:00:00.000Z"
                 },
                 "transactionDescription": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Alex gave me cash"
                 }
               }
             }
@@ -138,6 +171,12 @@
         "responses": {
           "202": {
             "description": "Accepted"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -148,7 +187,9 @@
         }
       },
       "delete": {
-        "tags": ["Transactions"],
+        "tags": [
+          "Transactions"
+        ],
         "description": "",
         "parameters": [
           {
@@ -162,6 +203,9 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "422": {
             "description": "Unprocessable Entity"
           },
@@ -173,9 +217,14 @@
     },
     "/transactions/import": {
       "post": {
-        "tags": ["Transactions"],
-        "summary": "upload a csv file",
-        "consumes": ["multipart/form-data"],
+        "tags": [
+          "Transactions"
+        ],
+        "summary": "Upload a CSV Bank Transaction File",
+        "description": "",
+        "consumes": [
+          "multipart/form-data"
+        ],
         "parameters": [
           {
             "name": "csvFile",
@@ -192,6 +241,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "422": {
             "description": "Unprocessable Entity"
           },
@@ -203,9 +255,13 @@
     },
     "/transactions/{transactionId}/{splitId}": {
       "get": {
-        "tags": ["Splits"],
+        "tags": [
+          "Splits"
+        ],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "transactionId",
@@ -224,6 +280,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -236,8 +295,10 @@
         }
       },
       "put": {
-        "tags": ["Splits"],
-        "description": "\r  {\r  \"categoryName\": \"Transfers\",\r  \"splitAmount\": 93.00,\r  \"splitNote\": \"Car Insurance Bill Due\" ,\r  \"confirmAddCategory\": true\r  }\r  ",
+        "tags": [
+          "Splits"
+        ],
+        "description": "",
         "parameters": [
           {
             "name": "transactionId",
@@ -254,20 +315,25 @@
           {
             "name": "body",
             "in": "body",
+            "description": "Edit a Split",
             "schema": {
               "type": "object",
               "properties": {
                 "categoryName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Transfers"
                 },
                 "splitAmount": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 93
                 },
                 "splitNote": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Car Insurance Bill Due"
                 },
                 "confirmAddCategory": {
-                  "example": "any"
+                  "type": "boolean",
+                  "example": true
                 }
               }
             }
@@ -279,6 +345,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -292,7 +361,9 @@
         }
       },
       "delete": {
-        "tags": ["Splits"],
+        "tags": [
+          "Splits"
+        ],
         "description": "",
         "parameters": [
           {
@@ -312,6 +383,12 @@
           "204": {
             "description": "No Content"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
           "422": {
             "description": "Unprocessable Entity"
           },
@@ -323,8 +400,10 @@
     },
     "/transactions/{transactionId}/": {
       "post": {
-        "tags": ["Splits"],
-        "description": "\r  {\r  \"categoryName\": \"Transfers\",\r  \"splitAmount\": 93,\r  \"splitNote\": \"\",\r  \"confirmAddCategory\": true\r  }\r  ",
+        "tags": [
+          "Splits"
+        ],
+        "description": "",
         "parameters": [
           {
             "name": "transactionId",
@@ -335,20 +414,25 @@
           {
             "name": "body",
             "in": "body",
+            "description": "Create a new Split",
             "schema": {
               "type": "object",
               "properties": {
                 "categoryName": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Transfers"
                 },
                 "splitAmount": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 93
                 },
                 "splitNote": {
-                  "example": "any"
+                  "type": "string",
+                  "example": ""
                 },
                 "confirmAddCategory": {
-                  "example": "any"
+                  "type": "boolean",
+                  "example": true
                 }
               }
             }
@@ -360,6 +444,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "422": {
             "description": "Unprocessable Entity"
